--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "v5",
+  "name": "4sp-local-client",
   "version": "1.0.0",
-  "main": "admin_keybinds.js",
+  "main": "local-file/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "Local client for 4SP"
 }
